# k45-workout-app

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
data/workouts/: medusa_2026_06_07.json
data_acquisition/src/: adapter.py
data_acquisition/src/models/: equipment.py  exercise.py  set_timing.py  workout.py
src/data/exercises/: 90_to_90_supported.json  agility_box_lateral_run_with_tap.json  alt_bicep_curl_and_shoulder_press.json  alternate_arm_row.json  alternate_floor_row_neutral_grip.json  alternate_floor_row_pause_neutral_grip.json  alternate_single_push_press.json  arm_circles.json  assisted_vertical_jump.json  back_loaded_reverse_lunges.json  back_rack_sumo_squat_one_half.json  back_roll_candle_stick.json  backloaded_reverse_lunges.json  balance_trainer_plank_alternate_knee_to_elbow.json  balance_trainer_side_to_side_tilt.json  balance_trainer_single_leg_glute_bridge_5x5.json  bear_crawl_reverse_soft_box_step_up.json  bench_hop_burpee.json  bench_incline_pull.json  bench_seated_alternate_shoulder_press.json  bent_over_row.json  bent_over_row_offset_grip_pulse.json  bent_over_row_underhand_grip.json  bicep_curl.json  bicep_curl_alternating.json  bicep_curls.json  bicep_drag_curl.json  bicycle_ab_crunch.json  bike_erg.json  bike_erg_seated.json  bike_erg_sprint.json  bike_erg_squat_jump_combo.json  bike_erg_standing.json  box_bulgarian_squat.json  (+133 more)
src/data_acquisition/: Raw Text Input.txt  adapter.py  exercise_repository.py  workout_builder.py  workout_text_parser.py
src/tests/: test_adapter.py  test_exercise_repository.py  test_workout_builder.py
(+5 files in other folders)
