[project]
name = "k45-workout-app"
version = "0.1.0"
description = "A personal workout companion app that helps you follow F45-style workouts outside of the studio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.16",
]
