[project]
name = "k45-workout-app"
version = "0.1.0"
description = "A personal workout companion app that helps you follow F45-style workouts outside of the studio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["uv_build>=0.11.6"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = ["data_acquisition"]